Bug 286437 - "No Pick label" filter doesn't work
Summary: "No Pick label" filter doesn't work
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Albums-Filters (other bugs)
Version First Reported In: 2.2.0
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-12 18:43 UTC by Romain Henriet
Modified: 2012-06-27 07:37 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Romain Henriet 2011-11-12 18:43:56 UTC
Version:           2.2.0 (using KDE 4.7.3) 
OS:                Linux

You can't filter photos that don't have "Rejected/Pending/Accepted" flag because toggling "None" button alone make all photos disappear.

Reproducible: Always

Steps to Reproduce:
Open an album where you have photo tagged as Rejected/Pending/Accepted and others not tagged with it.
Open "Filters" tab.
Toggle "None" button on, in flags line.

Actual Results:  
All photos disappear

Expected Results:  
Only photos without flag should be shown

OS: Linux (x86_64) release 2.6.37.6-0.9-desktop
Compiler: gcc
Comment 1 Marcel Wiesweg 2012-02-20 15:44:10 UTC
Git commit e2c4347eb396259f5438d2f629b31710d4f4fb76 by Marcel Wiesweg.
Committed on 20/02/2012 at 16:42.
Pushed by mwiesweg into branch 'master'.

Fix filtering by "NoColorLabel" and "NoPickLabel"

This filtering need not only test for "has the NoColorLabel tag",
but also for "has none of the color label tags assigned"

M  +2    -2    NEWS
M  +49   -12   libs/models/imagefiltersettings.cpp

http://commits.kde.org/digikam/e2c4347eb396259f5438d2f629b31710d4f4fb76