Fix filtering by "NoColorLabel" and "NoPickLabel"

This filtering need not only test for "has the NoColorLabel tag",
but also for "has none of the color label tags assigned"

BUG: 286437